Integrate TIB terminology API for ontology search (#785)
Solves #784 and solves #734
---------

Co-authored-by: Tobias Koch <tobias.koch@qbic.uni-tuebingen.de>